# retail-postventa-analytics

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  PROJECT_PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: settings.py
dashboards/looker/: spec.md
dashboards/powerbi/: spec.md  tema.json
data_gen/: generar_contacts.py  generar_orders.py  generar_returns.py  generar_shipments.py  generar_surveys.py
dbt_project/: dbt_project.yml
dbt_project/models/dimensions/: dim_carriers.sql  dim_clientes.sql  dim_productos.sql  schema.yml
dbt_project/models/facts/: fct_contacts.sql  fct_orders.sql  schema.yml
dbt_project/models/marts/: mart_alerts_diarias.sql  mart_correlacion_otd_cpo.sql  mart_cpo_por_motivo.sql  mart_cpo_semanal.sql  mart_devoluciones_motivo.sql  mart_kpis_contact_center.sql  mart_otd_vs_sla.sql  schema.yml
dbt_project/models/staging/: _sources.yml  schema.yml  stg_contacts.sql  stg_orders.sql  stg_returns.sql  stg_shipments.sql  stg_surveys.sql
docs/: glosario.md  insights.md  metricas_y_decisiones.md  ml_results.md  orchestration_local.md  produccion_cloud.md
docs/superpowers/plans/: 2026-06-16-module-0-setup.md  2026-06-16-module-1-generadores.md
ml/: predict_contact.py
orchestration/dags/: retail_postventa_dag.py
scripts/: load_to_bigquery.py
tests/: test_dag.py  test_generadores.py  test_ml.py  test_settings.py  test_setup.py
