[project]
name = "retail-postventa-analytics"
version = "0.1.0"
description = "Analítica end-to-end de postventa e-commerce retail LATAM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow>=2.10,<3",
    "db-dtypes>=1.7.0",
    "google-cloud-bigquery>=3.42.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pandas-gbq>=0.35.0",
    "scikit-learn>=1.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "C90",  # mccabe complexity
]

[tool.ruff.lint.per-file-ignores]
# X/X_train/X_test are standard ML convention (sklearn API)
"ml/*.py" = ["N806"]
"tests/test_ml.py" = ["N806"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]
